# fullstack-starter

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  MIGRATION-PLAN.md  README.md  build.sh  dev.sh  docker-compose.yml  docker-entrypoint.sh  nginx.conf  publish.sh
.claude/plans/: ai-model-config.md  scheduler-design.md
.github/workflows/: docker-publish.yml
backend/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
backend-java/: .editorconfig  CLAUDE.md  Dockerfile  docker-entrypoint.sh  nginx.conf  pom.xml
backend/app/: config.py  database.py  deps.py  main.py
backend/app/core/: models.py  schemas.py  security.py  seed.py
backend/app/core/crud/: __init__.py  permissions.py  roles.py  users.py
backend/app/core/routes/: auth.py  dashboard.py  permissions.py  roles.py  users.py
backend/app/modules/ai_model/: crud.py  models.py  router.py  schemas.py
backend/app/modules/public/: router.py
backend/app/modules/system/: crud.py  models.py  router.py  schemas.py
frontend/: AGENTS.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend-vue/: AGENTS.md  CLAUDE.md  README.md  env.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend-vue/src/: App.vue
frontend-vue/src/assets/: main.css
frontend-vue/src/components/: AppHeader.vue  AppSidebar.vue  ThemeToggle.vue  ToastContainer.vue
frontend-vue/src/composables/: use-mobile.ts  (+1 more)
frontend/docs/: api.md
frontend/src/: main.tsx  router.tsx
(+121 files in other folders)
