[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend scaffold"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N803", "N815"]

[tool.fastapi]
entrypoint = "app.main:app"
